# iit-cogimon-ros-pkg

./: CMakeLists.txt  New Text Document.txt
cogimon_cartesio/: cogimon.stack  (+2 more)
cogimon_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cogimon_gazebo/database/: database.config
cogimon_gazebo/launch/: cogimon_world.launch
cogimon_gazebo/sdf/conf/cogimon/: cogimon_gazebo.ini  cogimon_gazebo_left_arm.ini  cogimon_gazebo_left_hand.ini  cogimon_gazebo_left_leg.ini  cogimon_gazebo_right_arm.ini  cogimon_gazebo_right_hand.ini  cogimon_gazebo_right_leg.ini  cogimon_gazebo_torso.ini  cogimon_gazebo_torso_speed.ini  cogimon_gazebo_torso_torque.ini
cogimon_urdf/: CMakeLists.txt  package.xml
cogimon_urdf/docs/: COGIMON_degree_of_freedom.pptx  centauro_ball end_eff.docx
cogimon_urdf/gazebo/: xbot_control.gazebo.xacro
cogimon_urdf/launch/: cogimon.launch  cogimon_capsules_slider.launch  cogimon_slider.launch
cogimon_urdf/meshes/: Foot2.stl  Head.STL  Leg0.STL  Leg1.STL  Leg2.STL  NeckFixed.stl  Waist.STL
cogimon_urdf/meshes/simple/: Arm0.capsule  Arm1.capsule  Forearm0.capsule  Forearm1.capsule  ForearmOld.capsule  Head.capsule  Leg0.STL  Leg0.capsule  Leg1.STL  Leg1.capsule  Leg2.STL  Leg2.capsule  Leg3.capsule  Leg4.capsule  SoftHandOpen.capsule  Torso3.capsule  Waist.STL  Waist.capsule
cogimon_urdf/script/: create_urdf_srdf_sdf.sh  load_acm.py
cogimon_urdf/urdf/: cogimon.urdf  cogimon.urdf.xacro  cogimon_base.urdf.xacro  cogimon_capsules.rviz  cogimon_config.urdf.xacro  cogimon_robot.urdf.xacro  coman_capsules.rviz
cogimon_urdf/urdf/config/: cogimon.urdf.xacro  cogimon_hands.urdf.xacro  cogimon_hardware.urdf.xacro  cogimon_no_forearms.urdf.xacro  cogimon_pennacchio.urdf.xacro  cogimon_softhand.urdf.xacro
cogimon_urdf/urdf/gazebo/: cogimon.gazebo.xacro  cogimon_materials.gazebo.xacro  force_torque.gazebo.xacro  imu.gazebo.xacro  microstrain_3dmgx2_imu.gazebo.xacro  rtt_gazebo.gazebo.xacro  xbot_control.gazebo.xacro  yarp_control.gazebo.xacro
cogimon_urdf/urdf/parts/: arms.urdf.xacro  arms_macro.urdf.xacro  ball_endeff.urdf.xacro  feet_reference_frames.urdf.xacro  forearms.urdf.xacro  head.urdf.xacro  legs.urdf.xacro  neck.urdf.xacro  no_forearms.urdf.xacro  soft_hand.urdf.xacro  soft_hands.urdf.xacro  torso.urdf.xacro  whole_upper_body.urdf.xacro
(+23 files in other folders)
